--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body>
-        <div>Hello World</div>
+    <body id="BODY">
         <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </body>
 </html>
