6: Basic page setup

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Code Challenge</title>
+        <title>Movie Browser</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body id="BODY">
-        <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+    <body class="Movies">
+         <header>
+            <h1>Movie Browser</h1>
+         </header>
+         <main id="MAIN">
+         </main>
+         <footer>Created by Dave Draper</footer>
+         <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </body>
 </html>
